# projekt-zaliczeniowy-Arkanoid

./: CMakeLists.txt  dokumentacja.docx  main.cpp
scripts/: Ball.cpp  Ball.h  Block.cpp  Block.h  Button.cpp  Button.h  GameBackGround.cpp  GameBackGround.h  HoverAndClickLevelSelectButtons.cpp  HoverAndClickLevelSelectButtons.h  HoverAndClickMainMenuButtons.cpp  HoverAndClickMainMenuButtons.h  HoverAndClickSettingsButtons.cpp  HoverAndClickSettingsButtons.h  LevelSelect.cpp  LevelSelect.h  Menu.cpp  Menu.h  Paddle.cpp  Paddle.h  showBackToLevelsButton.cpp  showBackToLevelsButton.h  showRestartLevelButton.cpp  showRestartLevelButton.h  showResultScreen.cpp  showResultScreen.h  showSettings.cpp  showSettingsScreen.h
